fix: removes validator in name and lastname
