# application/rest/docs/swagger.json
@@ -61,7 +61,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/rest.Employee"
+                                "$ref": "#/definitions/rest.EmployeeResponse"
                             }
                         }
                     },
@@ -104,7 +104,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/rest.Employee"
+                            "$ref": "#/definitions/rest.EmployeeRequest"
                         }
                     }
                 ],
@@ -162,7 +162,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/rest.Employee"
+                            "$ref": "#/definitions/rest.EmployeeResponse"
                         }
                     },
                     "400": {
@@ -298,7 +298,42 @@
         }
     },
     "definitions": {
-        "rest.Employee": {
+        "rest.EmployeeRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "email_verified",
+                "enabled",
+                "first_name",
+                "last_name",
+                "pis",
+                "username"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "email_verified": {
+                    "type": "boolean"
+                },
+                "enabled": {
+                    "type": "boolean"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "pis": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "rest.EmployeeResponse": {
             "type": "object",
             "required": [
                 "email",
